--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
 asgiref==3.4.1
-Django
+certifi==2021.5.30
+charset-normalizer==2.0.4
+Django==3.2.6
+idna==3.2
 isodate==0.6.0
-pyparsing
+numpy==1.21.1
+pandas==1.3.1
+pyparsing==3.0.0b3
+python-dateutil==2.8.2
 pytz==2021.1
 rdflib==6.0.0
+requests==2.26.0
 six==1.16.0
 sqlparse==0.4.1
 typing-extensions==3.10.0.0
-pandas
-numpy
+urllib3==1.26.6
